--- a/ResNet_V0_1.ipynb
+++ b/ResNet_V0_1.ipynb
@@ -173,7 +173,7 @@
         "outputId": "4b09f1f0-260f-44d9-f3de-a6fb16797a8e"
       },
       "source": [
-        "plt.imshow(x_train_new[2])\n",
+        "plt.imshow(x_train[2])\n",
         "plt.show()"
       ],
       "execution_count": null,
